--- a/.github/workflows/convert-lilypond.yml
+++ b/.github/workflows/convert-lilypond.yml
@@ -14,21 +14,39 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Download shell script
-      run: wget https://lilypond.org/downloads/binaries/linux-64/lilypond-2.18.2-1.linux-64.sh
+    - name: Download LilyPond 2.24.0 archive
+      run: wget https://gitlab.com/lilypond/lilypond/-/releases/v2.24.0/downloads/lilypond-2.24.0-linux-x86_64.tar.gz
 
-    - name: Make shell script executable
-      run: chmod +x lilypond-2.18.2-1.linux-64.sh
+    - name: Install LilyPond 2.24.0
+      run: tar -xzvf lilypond-2.24.0-linux-x86_64.tar.gz
 
-    - name: Call shell script
-      run: ./lilypond-2.18.2-1.linux-64.sh
+    -name: make directory
+      run: mkdir bajs_test
 
-    - name: Convert files (lilypond 2.18.2)
-      run: |
-        ./convert-songs-2_18_2.sh
-        
+    - name: Testa lilypond 2.24.0
+      run: /home/runner/bin/lilypond-2.24.0/bin/lilypond --output=output-file.svg bajs_test songs/2_24_0/Angbatssang/main.ly
+
     - name: Save artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: converted_songs
-        path: converted_songs
+        name: bajs_test
+        path: bajs_test
+        
+    # - name: Download shell script
+    #   run: wget https://lilypond.org/downloads/binaries/linux-64/lilypond-2.18.2-1.linux-64.sh
+
+    # - name: Make shell script executable
+    #   run: chmod +x lilypond-2.18.2-1.linux-64.sh
+
+    # - name: Call shell script
+    #   run: ./lilypond-2.18.2-1.linux-64.sh
+
+    # - name: Convert files (lilypond 2.18.2)
+    #   run: |
+    #     ./convert-songs-2_18_2.sh
+
+    # - name: Save artifacts
+    #   uses: actions/upload-artifact@v2
+    #   with:
+    #     name: converted_songs
+    #     path: converted_songs
