--- a/.github/workflows/convert-lilypond.yml
+++ b/.github/workflows/convert-lilypond.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Convert files (lilypond 2.24.0)
       run: |
-        ./convert-songs-2.24.0.sh
+        ./convert-songs-2_24.0.sh
 
     - name: Save artifacts
       uses: actions/upload-artifact@v2
